--- a/nav.css
+++ b/nav.css
@@ -2,7 +2,7 @@ body{
   margin:0;
   padding: 0;
   background-repeat: none;
-  background-color: grey;
+  background-color: blue;
   width: 100%;
   position: absolute;
 
