--- a/nav.css
+++ b/nav.css
@@ -2,10 +2,9 @@ body{
   margin:0;
   padding: 0;
   background-repeat: none;
-  background-color: blue;
+  background-image: url('Background.jpg');
   width: 100%;
   position: absolute;
-
 }
 span{
   font-family: 'Arial';
