--- a/nav.css
+++ b/nav.css
@@ -2,18 +2,33 @@ body{
   margin:0;
   padding: 0;
   background-repeat: none;
-  background-image: url('Background.jpg');
+  background-image: url(background.jpg);
   width: 100%;
   position: absolute;
+
+}
+img{
+  width: 320px; 
+  height: 480px; 
+  border-radius: 20px;
+}
+img:hover{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.69); 
+  transition: 0.2s;
+}
+.profile{
+  position: absolute;
+  top: 150px;
+  left: 100px;
 }
 span{
   font-family: 'Arial';
 }
 .message{
   position: absolute;
-  top: 300px;
-  left: 250px;
-  font-size: 100px;
+  top: 200px;
+  left: 450px;
+  font-size: 60px;
 }
 .container{
   top: 0;
@@ -24,7 +39,7 @@ span{
   border: none;
   background: none;
   padding: 10px 30px;
-  font-size: 30px;
+  font-size: 20px;
   margin: 0 0 0 -3px;
   cursor: pointer;
   transition: 0.8s;
@@ -32,7 +47,7 @@ span{
   overflow: hidden;
 }
 .btn1,.btn2{
-  color: black;
+  color: #3498db;
 }
 .btn1:hover,.btn2:hover{
   color: #fff;
@@ -59,3 +74,31 @@ span{
   height: 180%;
 }
 
+
+/*Text Replacement*/
+.text{
+  font-size:40px; 
+  font-family: 'Arial';
+  color: #7633F1;
+}
+.text:after{
+  content: "WEB DEVELOPER";
+  animation: animate infinite 10s;
+}
+@keyframes animate{
+  0%{
+    content: 'WEB DEVELOPER';
+  }
+  25%{
+    content: 'WEB DESIGNER';
+  }
+  50%{
+    content: 'CSS INTERMIDIATE';
+  }
+  75%{
+    content: 'HTML INTERMIDIATE';
+  }
+  100%{
+    content: 'FRONTEND DEVELOPER';
+  }
+}
